<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingDefaultResource">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.yuzu.ecom.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/md_white_1000"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminateDrawable="@drawable/progress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="@{safeUnbox(viewModel.loading) ? View.VISIBLE : View.GONE}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true"
            android:visibility="@{safeUnbox(viewModel.loading) ? View.GONE : View.VISIBLE}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_1000"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:padding="20dp"
                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/login_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/username"
                        android:singleLine="true"
                        android:textColorHint="@color/md_white_150"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionUnspecified"
                        style="@style/EditTextCustom"
                        app:layout_constraintTop_toBottomOf="@+id/login_label"
                        app:layout_constraintRight_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="40dp"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:textColorHint="@color/md_white_150"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionUnspecified"
                        style="@style/EditTextCustom"
                        app:layout_constraintTop_toBottomOf="@+id/username"
                        app:layout_constraintRight_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="20dp"/>

                    <RelativeLayout
                        android:id="@+id/remember_sign_layout"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        app:layout_constraintTop_toBottomOf="@+id/password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="20dp">

                        <CheckBox
                            android:id="@+id/remember_me"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:buttonTint="@color/black"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:text="@string/remember_me"/>

                        <Button
                            android:id="@+id/sign_in"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/btn_sign_in"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="@string/sign_in"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:background="@drawable/btn_facebook"
                        android:gravity="center"
                        app:layout_constraintTop_toBottomOf="@+id/remember_sign_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="40dp"
                        android:layout_marginHorizontal="60dp">

                        <ImageView
                            android:id="@+id/f"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_facebook"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="@string/facebook_sign"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/f"
                            android:layout_toEndOf="@+id/f" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/google"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:background="@drawable/btn_google"
                        android:gravity="center"
                        app:layout_constraintTop_toBottomOf="@+id/facebook"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="60dp">

                        <ImageView
                            android:id="@+id/g"
                            android:layout_width="20dp"
                            android:layout_height="20.40dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_google"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="@string/google_sign_in"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/g"
                            android:layout_toEndOf="@+id/g" />
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>